Extra data columns in the report header are hidden when the width of the page drops below 500px. This is to prevent them from breaking out of their container, as they're still white-space: nowrap.

--- a/website/js/css/custom.css
+++ b/website/js/css/custom.css
@@ -954,6 +954,12 @@ div.variant-submitter-group .submitter-header td {
     overflow: hidden;
 }
 
+@media (max-width: 500px) {
+    .submitter-header .submitter-cell.optional {
+        display: none;
+    }
+}
+
 .submitter-header .submitter-cell.submitter-name.collapsed {
     font-weight: bold;
 }
